Fixed overflow navigation'

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@ body{
     background-color: rgb(0, 0, 0);
     color: white;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     background-image: url('earth-background.jpg');
     background-position: center;
     background-repeat: no-repeat;
